# bare-rust

./: Cargo.toml  README.md
bare-rust/: Cargo.toml  README.md
bare-rust-ffi/: Cargo.toml  README.md
bare-rust-ffi/src/: lib.rs
bare-rust/src/: lib.rs
